# SpaceWars

./: .gitignore  10-empate.txt  10.txt  12-jogo.txt  8.txt  9-ganha1.txt  9.txt  AUTHORS  LEIAOREADME  LICENSE  Makefile.am  Makefile.in  README  README.md  ai.c  ai.h  bell  bell.c  build.sh  compacta.sh  config.txt  configure  debug.c  debug.h  display.c  display.h  ep3.c  ep4  ep4.c  fisica.c  fisica.h  game.c  game.h  io.c  io.h  keyboard.c  keyboard.h  lex.yy.c  objetos.c  objetos.h  (+14 more)
assets/: ajuda.xpm  background.xpm  empate.xpm  intro.xpm  nave1ganhou.xpm  nave2ganhou.xpm
assets/botoes/: Jogar-off.xpm  Jogar-on.xpm  Opcoes-off.xpm  Opcoes-on.xpm  Sair-off.xpm  Sair-on.xpm
assets/fonts/: textos.xcf
assets/settings/: settings.txt
assets/sprites/: geraImagens.sh  nave1 - 0.xpm  nave1 - 1.xpm  nave1 - 12.xpm  nave1 - 14.xpm  nave1 - 15.xpm  nave1 - 16.xpm  nave1 - 21.xpm  nave1 - 22.xpm  nave1 - 24.xpm  nave1 - 25.xpm  nave1 - 27.xpm  nave1 - 31.xpm  nave1 - 4.xpm  nave1 - 5.xpm  nave1 - 7.xpm  nave1 - 8.xpm  nave1.xpm  nave2 - 1.xpm  nave2 - 11.xpm  nave2 - 13.xpm  nave2 - 14.xpm  nave2 - 16.xpm  nave2 - 18.xpm  nave2 - 19.xpm  nave2 - 2.xpm  nave2 - 23.xpm  nave2 - 24.xpm  nave2 - 25.xpm  nave2 - 26.xpm  nave2 - 29.xpm  nave2 - 3.xpm  nave2 - 6.xpm  nave2 - 7.xpm  nave2 - 8.xpm  nave2.xpm  planeta-original.xpm  planeta.xpm  projetil1 - 0.xpm  projetil1 - 1.xpm  (+11 more)
assets/sprites/botoes/: Ajuda-off.xpm  Ajuda-on.xpm  Jogar-off.xpm  Jogar-on.xpm  Sair-off.xpm  Sair-on.xpm
assets/sprites/contagem/: contagem - 1.xpm  contagem - 2.xpm  contagem - 3.xpm  go.xpm
(+133 files in other folders)
