bin_PROGRAMS= ep3 teste teste2 teste3 teste4 teste5
ep3_SOURCES= ep3.c
ep3_LDADD = xwc.o fisica.o display.o

teste_SOURCES= teste.c xwc.c xwc.h
teste_LDADD =  $(X_LIBS) $(X_EXTRA_LIBS)

teste2_SOURCES= teste2.c
teste2_LDADD = xwc.o

teste3_SOURCES= teste3.c samp.xpm mascara.xpm
teste3_LDADD = xwc.o

teste4_SOURCES= teste4.c
teste4_LDADD = xwc.o

teste5_SOURCES= teste5.c
teste5_LDADD = xwc.o
